# hmoe

./: .gitignore  Makefile  README.md  elm.json  hmoe.cabal  shell  shell.nix  site_key.txt
backend/: Application.hs  Config.hs  Site.hs
backend/Moe/: Api.hs  Img.hs  InfoParser.hs  Utils.hs
frontend/: Image.elm  Index.elm  Main.elm  Query.elm
frontend/src/: Image.elm  Main.elm  Model.elm  Query.elm  Utils.elm
frontend/styles/: main.css
src/: Application.hs  Site.hs
src/Moe/: Api.hs  Core.hs  Img.hs  InfoParser.hs
static/: img_info.txt  index.html  main.js
static/styles/: main.css
test/: Main.hs
