Name:                hmoe
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >= 1.10

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Flag old-base
  default: False
  manual: False


Executable hmoe
  hs-source-dirs: backend
  main-is: Main.hs
  other-modules: Site
               , Application
               , Moe.Api
               , Moe.Img
               , Moe.InfoParser
               , Moe.Utils

  Build-depends: base                      >= 4.4     && < 5
               , aeson
               , attoparsec
               , bytestring                >= 0.9.1   && < 0.11
               , containers
               , directory
               , gd
               , lens                      >= 3.7.6   && < 4.18
               , mtl                       >= 2       && < 2.3
               , snap                      >= 1.0     && < 1.2
               , snap-core                 >= 1.0     && < 1.1
               , snap-loader-static        >= 1.0     && < 1.1
               , snap-server               >= 1.0     && < 1.2
               , text                      >= 0.11    && < 1.3

  default-extensions: OverloadedStrings

  if flag(development)
    build-depends:
      snap-loader-dynamic >= 1.0 && < 1.1
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
