Name:                hmoe
Version:             0.2
Synopsis:            hmoe
Description:         hmoe = Moe * Haskell
License:             BSD3
Author:              ngyj
Maintainer:          ngyj@cinnabar.fr
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >= 1.10

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Flag old-base
  default: False
  manual: False

library
  default-language: Haskell2010
  hs-source-dirs: backend
  exposed-modules: Site
                 , Application
                 , Moe.Api
                 , Moe.Img
                 , Moe.InfoParser
                 , Moe.Utils
                 , Config

  Build-depends: base                      >= 4.4     && < 4.14
               , aeson
               , attoparsec
               , bytestring                >= 0.9.1   && < 0.11
               , containers
               , directory
               , gd
               , lens
               , transformers
               , mtl
               , snap
               , snap-core
               , snap-loader-static
               , snap-server
               , text                      >= 0.11    && < 1.3
               , bytestring-trie
               , uri-encode

test-suite hmoe-test
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  main-is: Main.hs
  hs-source-dirs: test
  build-depends: base
               , hmoe
               , hspec

executable hmoe
  default-language: Haskell2010
  hs-source-dirs: backend/exe
  main-is: Main.hs
  Build-depends: base                      >= 4.4     && < 5
               , snap                      >= 1.0     && < 1.2
               , snap-core                 >= 1.0     && < 1.1
               , snap-loader-static        >= 1.0     && < 1.1
               , snap-server               >= 1.0     && < 1.2
               , text                      >= 0.11    && < 1.3
               , hmoe

  if flag(development)
    build-depends:
      snap-loader-dynamic >= 1.0 && < 1.1
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind -static
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -static
